# whisperAloud

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DEPENDENCIES.md  GROK_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  PHASES_3_TO_7_ROADMAP.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PROMPT_FOR_GROK.md  PROMPT_PHASE_2_FOR_GROK.md  PROMPT_PHASE_3_FOR_GROK.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  Untitled-1  VALIDATION_GUIDE.md  WAYLAND_INTEGRATION_PLAN.md  com.whisperaloud.App.desktop  conftest.py  install.sh  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.lattice/: ids.json
.lattice/events/: _lifecycle.jsonl  task_01KHZBXCSM3PDEYSHBMP8ATFR1.jsonl  task_01KHZBXCTW5T65BQJN7VP51KFN.jsonl  task_01KHZBXCWYBBDYZYC0K054B9R5.jsonl  task_01KHZBXCYT91YYKZ6B5HF3KEEE.jsonl  task_01KHZCC0X5WJRHY7W3AXFFKG2X.jsonl  task_01KHZCC11X0M59SE4W01MZ59Q6.jsonl  task_01KHZCC16S7D142MCBM4KRZNQC.jsonl  task_01KHZCC1BFMKDFNCMBH2C0H3YP.jsonl  task_01KHZCC1GR429T5NNBP4567J2H.jsonl  task_01KHZCC1NGR0KNZFGZ1CF68EXB.jsonl  task_01KHZCC1T26BFCCHENJBBC9QRY.jsonl  task_01KHZCC1YGNET03SYJC9ZPF1CK.jsonl  task_01KHZCC239PQSAS3C3E8CZX6CZ.jsonl  task_01KHZCC282BM7FR1G7AEPADZT5.jsonl  task_01KHZGN3PZTKZMB4H003ESMYBF.jsonl
.lattice/plans/: task_01KHZBXCSM3PDEYSHBMP8ATFR1.md  task_01KHZBXCTW5T65BQJN7VP51KFN.md  task_01KHZBXCWYBBDYZYC0K054B9R5.md  task_01KHZBXCYT91YYKZ6B5HF3KEEE.md  task_01KHZCC0X5WJRHY7W3AXFFKG2X.md  task_01KHZCC11X0M59SE4W01MZ59Q6.md  task_01KHZCC16S7D142MCBM4KRZNQC.md  task_01KHZCC1BFMKDFNCMBH2C0H3YP.md  task_01KHZCC1GR429T5NNBP4567J2H.md  task_01KHZCC1NGR0KNZFGZ1CF68EXB.md  task_01KHZCC1T26BFCCHENJBBC9QRY.md  task_01KHZCC1YGNET03SYJC9ZPF1CK.md  task_01KHZCC239PQSAS3C3E8CZX6CZ.md  task_01KHZCC282BM7FR1G7AEPADZT5.md  task_01KHZGN3PZTKZMB4H003ESMYBF.md
.lattice/tasks/: task_01KHZBXCSM3PDEYSHBMP8ATFR1.json  task_01KHZBXCTW5T65BQJN7VP51KFN.json  task_01KHZBXCWYBBDYZYC0K054B9R5.json  task_01KHZBXCYT91YYKZ6B5HF3KEEE.json  task_01KHZCC0X5WJRHY7W3AXFFKG2X.json  task_01KHZCC11X0M59SE4W01MZ59Q6.json  task_01KHZCC16S7D142MCBM4KRZNQC.json  task_01KHZCC1BFMKDFNCMBH2C0H3YP.json  task_01KHZCC1GR429T5NNBP4567J2H.json  task_01KHZCC1NGR0KNZFGZ1CF68EXB.json  task_01KHZCC1T26BFCCHENJBBC9QRY.json  task_01KHZCC1YGNET03SYJC9ZPF1CK.json  task_01KHZCC239PQSAS3C3E8CZX6CZ.json  task_01KHZCC282BM7FR1G7AEPADZT5.json  task_01KHZGN3PZTKZMB4H003ESMYBF.json
contrib/: whisper-aloud-autostart.desktop
data/: org.fede.whisperaloud.desktop  org.fede.whisperaloud.metainfo.xml  org.fede.whisperaloud.service  org.fede.whisperaloud.xml  run  run-gui  whisper-aloud.service
debian/: changelog  control  copyright  whisper-aloud.install  whisper-aloud.links
docs/: release-checklist.md
docs/plans/: 2026-02-19-professional-upgrade-design.md  2026-02-19-professional-upgrade-plan.md
examples/: README.md  demo_clipboard.py  demo_gui.py  demo_history.py  demo_quick.py  demo_realtime_levels.py
gnome-extension/: extension.js  metadata.json
gnome-extension/schemas/: org.gnome.shell.extensions.whisperaloud.gschema.xml
scripts/: README.md  check_dependencies.py  install-daemon.sh  install_cuda.sh  install_gnome_integration.sh  test_ci.sh  test_daemon.py  test_full_deps.sh  test_packaging_smoke.sh  test_transcription_simple.py  validate_install_matrix.sh  validate_system.py
src/whisper_aloud/: __init__.py  __main__.py  config.py  exceptions.py  gnome_integration.py  (+1 more)
tests/: conftest.py  test_audio_deduplication.py  test_audio_device_manager.py  test_audio_pipeline.py  test_audio_processor.py  test_audio_recorder.py  test_cli.py  test_clipboard.py  test_config.py  test_config_persistence.py  test_config_reload_integration.py  test_daemon.py  test_daemon_auto_paste.py  test_dbus_client.py  test_history_daemon_manager.py  test_history_item_logic.py  test_history_manager_transactions.py  test_history_panel_logic.py  test_history_ui.py  test_hotkey.py  test_indicator.py  test_integration.py  test_level_meter.py  test_level_meter_logic.py  test_main_window_logic.py  test_media_control.py  test_paste_simulator_shortcut.py  test_persistence.py  test_recording_flow_integration.py  test_settings_dialog_logic.py  test_status_bar_logic.py  test_transcriber.py  test_ui_utils.py  test_validation_helpers.py
(+46 files in other folders)
