[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-aloud"
version = "0.2.0"
description = "Voice dictation with Whisper AI for Linux/GNOME"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WhisperAloud Team", email = "whisperaloud@example.com"}
]
keywords = ["whisper", "transcription", "dictation", "speech-to-text", "gnome"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "psutil>=5.9.0",
    "pydbus>=0.6.0",
    # PyGObject/GTK4: Use system package (python3-gi) instead of pip
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
whisper-aloud = "whisper_aloud.__main__:main"
whisper-aloud-transcribe = "whisper_aloud.__main__:main"
whisper-aloud-gui = "whisper_aloud.ui:main"
whisper-aloud-daemon = "whisper_aloud.__main__:daemon_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E402", "E501", "N802"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "misc",
    "name-defined",
    "no-any-return",
    "union-attr",
    "valid-type",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=whisper_aloud --cov-report=term-missing"
markers = [
    "integration: End-to-end or multi-component tests.",
    "requires_audio_hw: Tests that need real audio input hardware.",
    "requires_display: Tests that need a GUI display/GTK environment.",
    "requires_dbus: Tests that need a live user D-Bus session.",
]
